* show/info: add color support for odd/even rows in --output table (configurable via cfg)
* show: --include/--exclude recalculates ranking after include/excluding all bots matching specified regexes
* bot add: when you submit a bot, it will run a single game against itself to check for crashes before adding it to db (configurable via cfg)
* run: only a single run is allowed
* progress bar when performing ranking recalculation (you can turn it off via cfg)
* rating calculation can skip errors now (configurable via cfg), useful if you want to reduce impact of random timeouts
* [fix] any ranking recalculation (usually removing a bot) would reset active status of all remaining bots 
[0.4.1]
* [fix] info, bot remove, bot update should correctly work games with 3+ players
[0.4.0]
* support for games with 3+ players (requires updating n_players & cmd_play_game in the cfg file); example play_game script is updated as well
* show: --recent is sorted by score & shows position in the overall ranking as well
* [fix] PDATA_ALL is always sorted
[0.3.1]
* info: new command to show detailed stats about specific bot (for now it's just winrates)
* [fix] PDATA_ALL now works correctly
[0.3.0]
* games can now store additional custom data (per test or per player):
    - you can use test data to recalculate ratings on a subset of games (via show --filters)
    - you can display player data on the leaderboard (check out the config file for more information)
    - play_game script now uses a new JSON format and allows for returning multiple games; old format has been removed
    - .games file: format changed to JSON
    - see readme.md for CodinGame-specific play_game script example that uses the new standard and allows for easy data extraction
* run: -w/--workers N overrides the number of workers set in the config file
* show: -s/--resample N displays the ranking using bootstrapped (resampling with replacement) with N games