@@ -5,7 +5,8 @@
 * show/info: add color support for odd/even rows in --output table (configurable via cfg)
 * show: --include/--exclude recalculates ranking after include/excluding all bots matching specified regexes
 * bot add: when you submit a bot, it will run a single game against itself to check for crashes before adding it to db (configurable via cfg)
-* run: only a single run is allowed
+* bot add: --setup to override cmd_bot_setup from cfg
+* run: only a single run is allowed, throws error when you want to run multiple run in parallel
 * progress bar when performing ranking recalculation (you can turn it off via cfg)
 * rating calculation can skip errors now (configurable via cfg), useful if you want to reduce impact of random timeouts
 * [fix] any ranking recalculation (usually removing a bot) would reset active status of all remaining bots 
